syntax = "proto3";
package certmanagerproto;

//import "google/protobuf/timestamp.proto";

option go_package = "./main";

message ClientAuth {
	string domain=1;
	string certificates=2;
}

message ServerAuthToken {
	string cryptotoken=1;
}

message ClientAuthTokenACK {
	string cryptotokenACK=1;
}
